Show errors for retried jobs

--- a/web/locales/en.yml
+++ b/web/locales/en.yml
@@ -22,6 +22,7 @@ en: # <---- change this to your locale code
   Class: Class
   Job: Job
   Arguments: Arguments
+  Error: Error
   Extras: Extras
   Started: Started
   ShowAll: Show All
